[gd_scene load_steps=32 format=3 uid="uid://ihvo68ayk1vv"]

[ext_resource type="Script" path="res://Scenes/main.gd" id="1_gppg3"]
[ext_resource type="Texture2D" uid="uid://cvh3ha72mca3p" path="res://Assets/Graphics/files-spread.png" id="2_2eyc0"]
[ext_resource type="Texture2D" uid="uid://cen1fed6pvnkh" path="res://Assets/Graphics/background.png" id="2_hv02j"]
[ext_resource type="Shader" path="res://Assets/Shaders/waving_particles.gdshader" id="3_lx0so"]
[ext_resource type="Texture2D" uid="uid://cvrx1id6pxbox" path="res://Assets/Graphics/files-organized.png" id="3_mxfj0"]
[ext_resource type="Texture2D" uid="uid://0pnl5ch08k8r" path="res://Assets/Graphics/desk.png" id="3_pffxn"]
[ext_resource type="Texture2D" uid="uid://cvex4j44d32v3" path="res://Assets/Graphics/water-spilled.png" id="4_ernyc"]
[ext_resource type="Texture2D" uid="uid://mr870308wmop" path="res://Assets/Graphics/window.png" id="4_lx7sw"]
[ext_resource type="Texture2D" uid="uid://74broqd2mgrp" path="res://Assets/Graphics/gnome-idle.png" id="5_8xajt"]
[ext_resource type="Texture2D" uid="uid://dtqkl3flnjrek" path="res://Assets/Graphics/water-cleaned.png" id="5_e6cdn"]
[ext_resource type="Script" path="res://Scenes/gnome.gd" id="5_sdo1f"]
[ext_resource type="Texture2D" uid="uid://c2asnc3x5p0dd" path="res://Assets/Graphics/pen-holder-empty.png" id="6_ouaay"]
[ext_resource type="Texture2D" uid="uid://rd5usoaww6po" path="res://Assets/Graphics/gnome-magic.png" id="6_puo3o"]
[ext_resource type="AudioStream" uid="uid://dup6l4pcclh4l" path="res://Assets/Audio/wind-during-snow-storm-2-17562.mp3" id="6_ufcmc"]
[ext_resource type="Texture2D" uid="uid://co0sm7xaio6sf" path="res://Assets/Graphics/floor.png" id="7_deh6j"]
[ext_resource type="Texture2D" uid="uid://sbf5xebbr38b" path="res://Assets/Graphics/pen-holder.png" id="7_hprhk"]
[ext_resource type="Texture2D" uid="uid://xderqa2f6i7o" path="res://Assets/Graphics/exclamation-mark.png" id="8_4oyq0"]
[ext_resource type="AudioStream" uid="uid://dcwkxtketskvh" path="res://Assets/Audio/christmas-bells-04-279696.mp3" id="8_grmal"]
[ext_resource type="Texture2D" uid="uid://bubs2c0fko33d" path="res://Assets/Graphics/gloves-spread.png" id="8_x4b86"]
[ext_resource type="PackedScene" uid="uid://c11moj128sim1" path="res://Scenes/decoration.tscn" id="9_3ub6o"]
[ext_resource type="Texture2D" uid="uid://cmvg44eim7err" path="res://Assets/Graphics/gloves-organized.png" id="9_21wrt"]
[ext_resource type="AudioStream" uid="uid://rmccstn0yha1" path="res://Assets/Audio/peluquero-1-100241.mp3" id="10_uxqms"]
[ext_resource type="Texture2D" uid="uid://7fl4v5kfifdj" path="res://Assets/Graphics/present-red.png" id="12_fpbki"]
[ext_resource type="Texture2D" uid="uid://3jk4w2lsyxyp" path="res://Assets/Graphics/present-green.png" id="13_gi53u"]
[ext_resource type="Texture2D" uid="uid://byax3kins21ta" path="res://Assets/Graphics/lights.png" id="14_yks3h"]
[ext_resource type="Texture2D" uid="uid://bfqwgdcrntdet" path="res://Assets/Graphics/wreath.png" id="15_xpdy0"]
[ext_resource type="PackedScene" uid="uid://b7pckjq1otaqs" path="res://Scenes/ending_screen.tscn" id="20_2thqd"]
[ext_resource type="AudioStream" uid="uid://ekf2e8fhi036" path="res://Assets/Audio/winning-82808.mp3" id="20_v1mgj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qmqem"]
shader = ExtResource("3_lx0so")
shader_parameter/rows = 10.0
shader_parameter/columns = 5.0
shader_parameter/vertical_scroll = 0.2
shader_parameter/horizontal_scroll = 0.02
shader_parameter/size_min = 0.4
shader_parameter/size_max = 0.7
shader_parameter/wave_min = 0.3
shader_parameter/wave_max = 0.7
shader_parameter/wave_speed = 1.0
shader_parameter/wave_rotation = 0.2
shader_parameter/far_color = Color(0.764122, 0.861918, 0.989129, 1)
shader_parameter/near_color = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j77xf"]
size = Vector2(95, 126)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uay5v"]
bg_color = Color(0, 0, 0, 0.392157)

[node name="Main" type="Node2D"]
script = ExtResource("1_gppg3")
textures = Array[Array]([[ExtResource("2_2eyc0"), ExtResource("3_mxfj0")], [ExtResource("4_ernyc"), ExtResource("5_e6cdn")], [ExtResource("6_ouaay"), ExtResource("7_hprhk")], [ExtResource("8_x4b86"), ExtResource("9_21wrt")]])

[node name="Background" type="Node2D" parent="."]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Wall" type="Sprite2D" parent="Background"]
texture = ExtResource("2_hv02j")

[node name="TextureRect" type="TextureRect" parent="Background"]
material = SubResource("ShaderMaterial_qmqem")
offset_left = -488.0
offset_top = -358.0
offset_right = 488.0
offset_bottom = -230.0
texture = ExtResource("4_lx7sw")

[node name="Floor" type="Sprite2D" parent="Background"]
position = Vector2(0, 250)
texture = ExtResource("7_deh6j")

[node name="Gnome" type="Node2D" parent="."]
position = Vector2(-350, 291)
script = ExtResource("5_sdo1f")
metadata/_edit_group_ = true

[node name="SpriteIdle" type="Sprite2D" parent="Gnome"]
texture = ExtResource("5_8xajt")
metadata/_edit_lock_ = true

[node name="SpriteMagic" type="Sprite2D" parent="Gnome"]
visible = false
texture = ExtResource("6_puo3o")
metadata/_edit_lock_ = true

[node name="SpriteExclamationMark" type="Sprite2D" parent="Gnome"]
visible = false
position = Vector2(-20, -76)
rotation = -0.261799
texture = ExtResource("8_4oyq0")

[node name="MagicTimer" type="Timer" parent="Gnome"]
wait_time = 2.0
one_shot = true

[node name="MagicSFX" type="AudioStreamPlayer" parent="Gnome"]
stream = ExtResource("8_grmal")
volume_db = -5.0

[node name="Area2D" type="Area2D" parent="Gnome"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gnome/Area2D"]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_j77xf")

[node name="SurpriseTimer" type="Timer" parent="Gnome"]
wait_time = 0.3
one_shot = true

[node name="SurpriseSFX" type="AudioStreamPlayer" parent="Gnome"]
stream = ExtResource("10_uxqms")

[node name="Decoration1" parent="." instance=ExtResource("9_3ub6o")]
position = Vector2(237, 307)
texture = ExtResource("12_fpbki")
amount = 12
emission_box_x = 60
emission_box_y = 30
metadata/_edit_lock_ = true

[node name="Decoration2" parent="." instance=ExtResource("9_3ub6o")]
position = Vector2(-196, 203)
texture = ExtResource("13_gi53u")
amount = 12
emission_box_x = 60
emission_box_y = 30
metadata/_edit_lock_ = true

[node name="Decoration3" parent="." instance=ExtResource("9_3ub6o")]
position = Vector2(0, -209)
texture = ExtResource("14_yks3h")
amount = 32
emission_box_x = 460
emission_box_y = 20
metadata/_edit_lock_ = true

[node name="Desk" type="Node2D" parent="."]
position = Vector2(0, -20)
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Desk"]
texture = ExtResource("3_pffxn")

[node name="Area2D" type="Area2D" parent="Desk"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Desk/Area2D"]
polygon = PackedVector2Array(-400, -152, -445, 118, 449, 116, 401, -154)

[node name="Decoration4" parent="." instance=ExtResource("9_3ub6o")]
position = Vector2(0, 165)
texture = ExtResource("15_xpdy0")
amount = 24
emission_box_x = 320
emission_box_y = 30

[node name="Objects" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
metadata/_edit_lock_ = true

[node name="AmbianceMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ufcmc")
volume_db = 3.0
autoplay = true

[node name="EndingTimer" type="Timer" parent="."]
one_shot = true

[node name="EndingSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_v1mgj")

[node name="HUD" type="CanvasLayer" parent="."]
visible = false

[node name="Overlay" type="Panel" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uay5v")

[node name="EndingScreen" parent="HUD" instance=ExtResource("20_2thqd")]

[connection signal="magic_end" from="Gnome" to="." method="_on_gnome_magic_end"]
[connection signal="timeout" from="Gnome/MagicTimer" to="Gnome" method="_on_magic_timer_timeout"]
[connection signal="input_event" from="Gnome/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="timeout" from="Gnome/SurpriseTimer" to="." method="_on_surprise_timer_timeout"]
[connection signal="timeout" from="EndingTimer" to="." method="_on_ending_timer_timeout"]
